[package]
name = "camelcase"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Convert a dash/dot/underscore/space-separated string to camelCase (foo-bar -> fooBar). A faithful port of the camelcase npm package."
documentation = "https://docs.rs/camelcase"
repository = "https://github.com/trananhtung/camelcase"
homepage = "https://github.com/trananhtung/camelcase"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["camelcase", "camel-case", "pascalcase", "string", "case"]
categories = ["text-processing", "value-formatting"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
regex = "1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
